feat:Criado lógica de adicionar ingredientes

--- a/index.html
+++ b/index.html
@@ -158,26 +158,12 @@
             <div class="content-details">
                 <div class="details">
                     <div class="buttom-details">
-                        <button class="btn-Ingredients">Ingredientes
+                        <button id="btn-Ingredients" class="btn-details btn-details-active">Ingredientes
                         </button>
-                        <button class="btn-preparation">Modo de Preparo
+                        <button id="btn-preparation" class="btn-details">Modo de Preparo
                         </button>
                     </div>
-                    <div class="content-details">
-                        <ul>
-                            <li>2l de tucupi</li>
-                            <li>2 dentes de alho</li>
-                            <li>3 folhas de chicória do Pará</li>
-                            <li>1 maço de alfavaca</li>
-                            <li>300g de tapioca de mandioca</li>
-                            <li>1\2 colher de sal</li>
-                            <li>500ml de água</li>
-                            <li>4 folhas de chicória do Pará picadas</li>
-                            <li>3 maços de jambu</li>
-                            <li>5 pimentas de cheiro</li>
-                            <li>500g de camarão salgado</li>
-                        </ul>
-
+                    <div class="content-details-Ingredients-preparation">
                     </div>
 
                 </div>
