feat:Criado mudança em ingredientes

--- a/index.html
+++ b/index.html
@@ -164,6 +164,20 @@
                         </button>
                     </div>
                     <div class="content-details-Ingredients-preparation">
+                        <ul class="contentLiDish">
+                            <li>2l de tucupi</li>
+                            <li>2 dentes de alho</li>
+                            <li>3 folhas de chicória do Pará</li>
+                            <li>1 maço de alfavaca</li>
+                            <li>300g de tapioca de mandioca</li>
+                            <li>Meia colher de sal</li>
+                            <li>500ml de água</li>
+                            <li>4 folhas de chicória do Pará picadas</li>
+                            <li>3 maços de jambu</li>
+                            <li>5 pimentas de cheiro</li>
+                            <li>500g de camarão salgado</li>
+                        </ul>
+
                     </div>
 
                 </div>
