feat:finalizado page-cooking-dish

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul id="menu">
                         <li><a href="#" data-section="home-principal">Home</a></li>
                         <li><a href="#" data-section="section-about-me">Curiosidades</a></li>
-                        <li><a href="#" data-section="section-cooking-details">Receita</a></li>
+                        <li><a href="#" data-section="section-cooking-details">Contatos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -165,17 +165,9 @@
                     </div>
                     <div class="content-details-Ingredients-preparation">
                         <ul class="contentLiDish">
-                            <li>2l de tucupi</li>
-                            <li>2 dentes de alho</li>
-                            <li>3 folhas de chicória do Pará</li>
-                            <li>1 maço de alfavaca</li>
-                            <li>300g de tapioca de mandioca</li>
-                            <li>Meia colher de sal</li>
-                            <li>500ml de água</li>
-                            <li>4 folhas de chicória do Pará picadas</li>
-                            <li>3 maços de jambu</li>
-                            <li>5 pimentas de cheiro</li>
-                            <li>500g de camarão salgado</li>
+                            <li>Polpa de Açaí ou o fruto fresco</li>
+                            <li>Água</li>
+                            <li>2 xícaras (chá) de farinha de tapioca</li>            
                         </ul>
 
                     </div>
