--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <main>
         <div class="container-grid-dish-details">
             <div class="mask-background-dish">
-                <svg class="svg-background" width="316" height="332" viewBox="0 0 316 332" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g >
+                <svg class="svg-background" width="316" height="332" viewBox="0 0 316 332" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <g>
                         <path
-                            d="M103.818 0L252.53 160C252.53 160 291.626 204.278 304.438 236C319.04 272.152 315.662 332 315.662 332H0V0H103.818Z"
-                             />
+                            d="M103.818 0L252.53 160C252.53 160 291.626 204.278 304.438 236C319.04 272.152 315.662 332 315.662 332H0V0H103.818Z" />
                     </g>
                 </svg>
             </div>
@@ -155,6 +155,37 @@
                         </div>
                     </div>
 
+                </div>
+                <div class="container-social-initial">
+                    <div class="social-icons-content">
+                        <a target="_blank" href="">
+                            <?xml version="1.0"?>
+                            <svg class="brands fa-facebook-in" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                                <path
+                                    d="M15,3C8.373,3,3,8.373,3,15c0,6.016,4.432,10.984,10.206,11.852V18.18h-2.969v-3.154h2.969v-2.099c0-3.475,1.693-5,4.581-5 c1.383,0,2.115,0.103,2.461,0.149v2.753h-1.97c-1.226,0-1.654,1.163-1.654,2.473v1.724h3.593L19.73,18.18h-3.106v8.697 C22.481,26.083,27,21.075,27,15C27,8.373,21.627,3,15,3z" />
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="social-icons-content">
+                        <a target="_blank" href="">
+                            <svg class="brands fa-linkedin-in" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 448 512">
+                                <path
+                                    d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="social-icons-content">
+                        <a target="_blank" href="">
+                            <svg class="brands fa-instagram" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 448 512">
+                                <path
+                                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
 
             </div>
