feat:create initial project

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     </button>
                     <ul id="menu">
                         <li><a href="#" data-section="home-principal">Home</a></li>
+                        <li><a href="#" data-section="home-principal">Pratos Diversos</a></li>
                         <li><a href="#" data-section="section-about-me">Curiosidades</a></li>
                         <li><a href="#" data-section="section-cooking-details">Contatos</a></li>
                     </ul>
