refactor:header e text principal

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="dish-text-title">
                         <div>
                             <h1>
-                                <span class="word">Culinária Regional</span>
+                                <span class="word">Pratos Regionais</span>
                                 <span id="name-dish" class="word">Açaí</span>
                             </h1>
                         </div>
