refactor:atualizado informações

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
         <div class="container-grid-dish-details">
             <div class="mask-background-dish">
-                <svg class="svg-background" width="316" height="332" viewBox="0 0 316 332" fill="none"
+                <svg class="svg-background" width="316" height="332" viewBox="0 0 316 332" 
                     xmlns="http://www.w3.org/2000/svg">
                     <g>
                         <path
